fix width on mobile devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,7 +11,7 @@ $nav-item-color: black;
 }
 
 body {
-  margin: 0;
+  // margin: 0;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
   font-size: 18px;
   line-height: 1.3;
@@ -24,7 +24,7 @@ body {
   padding-right: ($spacer * 1.5);
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  width: 100%;
   border-width: 1px;
 }
 
